--- a/DebateMIS/pom.xml
+++ b/DebateMIS/pom.xml
@@ -170,6 +170,14 @@
             <version>2.13.2</version>
         </dependency>
 
+        <!--Jcseg分词库-->
+        <!-- https://mvnrepository.com/artifact/org.lionsoul/jcseg-core -->
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>jcseg-core</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
 
 
 
